# ppr

./: .clang-format  .clang-tidy.in  .dockerignore  .gitattributes  .gitignore  .pkg  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  alpine.Dockerfile  ubuntu.Dockerfile
.github/actions/install-llvm/: action.yml
.github/workflows/: docker.yml  linux.yml  release.yml  set_update_url.py  unix.yml  windows.yml
cmake/: buildcache.cmake  clang-tidy.cmake  pkg.cmake
include/ppr/backend/: http_server.h  params.h  request_parser.h  requests.h  server.h  ssl_settings.h
include/ppr/backend/output/: graph_response.h  route_response.h
include/ppr/cmd/backend/: prog_options.h
include/ppr/cmd/benchmark/: bbox.h  bench_spec.h  benchmark.h  bounds.h  csv_writer.h  parse_bbox.h  parse_poly.h  poly.h  prog_options.h  query.h  query_generator.h  stations.h  stats_writer.h
include/ppr/cmd/preprocess/: prog_options.h
include/ppr/common/: area.h  area_routing.h  data.h  edge.h  elevation.h  enums.h  level.h  location.h  location_geometry.h  math.h  matrix.h  memory_usage.h  memory_usage_monitor.h  memory_usage_printer.h  mimalloc_support.h  mlock.h  names.h  node.h  path_geometry.h  routing_graph.h  timing.h  tri_state.h  verify.h
include/ppr/common/geometry/: merc.h  path_conversion.h  polygon.h  serializable_polygon.h
include/ppr/output/: json.h
include/ppr/output/geojson/: base.h  edge_info.h  graph.h
include/ppr/preprocessing/: build_routing_graph.h  clamp.h  default_logging.h  geo_util.h  junction.h  logging.h  names.h  options.h  preprocessing.h  statistics.h  stats_writer.h  thread_pool.h
include/ppr/preprocessing/elevation/: dem_grid.h  dem_source.h
include/ppr/preprocessing/int_graph/: int_area.h  int_edge.h  int_graph.h  int_node.h  linked_crossings.h  oriented_int_edge.h  path.h  sidewalks.h
include/ppr/preprocessing/osm/: access.h  crossing.h  entrance.h  handrail.h  layer.h  level.h  parse.h  ramp.h  surface.h  way_info.h  wheelchair.h  width.h
include/ppr/preprocessing/osm_graph/: areas.h  builder.h  elevation.h  extractor.h  move_crossings.h  osm_area.h  osm_edge.h  osm_graph.h  osm_node.h  parallel_streets.h
include/ppr/preprocessing/routing_graph/: crossing_detour.h
include/ppr/profiles/: json.h  parse_search_profile.h
include/ppr/routing/: additional_edges.h  costs.h  directed_edge.h  input_areas.h  input_location.h  input_pt.h  label.h  labels_to_route.h  last_crossing_info.h  pareto_dijkstra.h  postprocessing.h  route.h  route_steps.h  routing_options.h  routing_query.h  search.h  search_profile.h  stairs.h  statistics.h
include/ppr/serialization/: mode.h  reader.h  writer.h
profiles/: accessibility1.json  default.json  distance_only.json  elevation.json  no_crossing_detours.json  wheelchair.json
src/backend/: http_server.cc  server.cc  ssl_settings.cc
src/backend/output/: graph_response.cc  route_response.cc
src/cmd/backend/: main.cc
src/cmd/benchmark/: bench_spec.cc  benchmark.cc  main.cc  parse_bbox.cc  parse_poly.cc  query_generator.cc  stations.cc  stats_writer.cc
src/cmd/footrouting/: main.cc
src/cmd/preprocess/: main.cc
src/common/: edge.cc  memory_usage.cc  mimalloc_support.cc
src/preprocessing/: build_routing_graph.cc  default_logging.cc  logging.cc  preprocessing.cc  statistics.cc  stats_writer.cc
src/preprocessing/elevation/: dem_grid.cc  dem_source.cc
src/preprocessing/int_graph/: int_edge.cc  int_graph.cc  linked_crossings.cc  path.cc  sidewalks.cc
src/preprocessing/osm/: access.cc  crossing.cc  layer.cc  level.cc  parse.cc  surface.cc  way_info.cc  width.cc
src/preprocessing/osm_graph/: areas.cc  builder.cc  elevation.cc  extractor.cc  move_crossings.cc  osm_edge.cc  parallel_streets.cc
src/preprocessing/routing_graph/: crossing_detour.cc
src/profiles/: parse_search_profile.cc
src/routing/: costs.cc  input_areas.cc  input_pt.cc  postprocessing.cc  route_steps.cc  search.cc
src/serialization/: reader.cc  writer.cc
test/: level_parser.cc  level_storage.cc
ui/web/: index.html
ui/web/css/: Control.Geocoder.css  leaflet-routing-machine.css
ui/web/js/: L.Routing.PPR.js  Leaflet.PolylineMeasure.js  geojson-overlay.js  index.js  map-links.js  profiles.js
